--- a/.gitignore
+++ b/.gitignore
@@ -396,3 +396,8 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+/test/test.csproj
+/LibraryTranslate/LibraryTranslate.csproj
+/consoleApp/consoleApp.csproj
+/botApp/botApp.csproj
+/Kowalski.sln
